feat: use wire packets API to construct minecraft packets on netty buffers level for future compatibility